--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#" class="follow-btn">Follow me</a>
         </div>
         <div class="profile-pic">
-            <img src="img/asal.jpg" alt="Asal Al_hawari">
+            <img src="img/406149433_371321771944877_3581468031961269411_n-removebg-preview.png" alt="Asal Al_hawari">
         </div>
     </main>
     <div class="containers" id="Summary">
